[package]
name = "batch-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "compare"
harness = false

[dependencies]
atomic-wait = "1.1"
thiserror = "1.0"

[dev-dependencies]
static_assertions = "1.1.0"
criterion = "0.4"
